mange ting fikset
