# JWT/routes/user/route.go
@@ -7,6 +7,8 @@ import (
 func UserRoutes(r *gin.Engine) {
 	r.GET("/users", Users)
 	r.GET("/user/:id", GetSingleUser)
+	r.GET("/user/email/:email", getUserByMail)
 	r.DELETE("/user/:id", DeleteUser)
 	r.PATCH("/user/:id", UpdateUser)
+	r.POST("/user/email/:email/password", postNewPasswordByMail)
 }
